Closed Bug 1497066 Opened 7 years ago Closed 6 years ago

Firefox CSD buttons blurry with HiDpi when using Arc and Ubuntu Ambiance GTK themes

Categories

(Core :: Widget: Gtk, defect, P3)

62 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: stevfredpatrick, Assigned: zzag)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:62.0) Gecko/20100101 Firefox/62.0 Steps to reproduce: 1. Run any new linux distro with GNOME 2. Set 200% scaling in display settings 3. use Arc GTK theme 4. disable firefox titlebar in customize More info here: https://github.com/NicoHood/arc-theme/issues/138 note: Ubuntu Ambiance has this issue too Actual results: Firefox is not rendering the image from background-image property of the window controls with 200% scaling. Expected results: The window controls should be rendered at high resolution and not be blurry
Component: Untriaged → Theme
Blocks: gtktitlebar
Component: Theme → Widget: Gtk
Product: Firefox → Core
Still the case on nightly 65.0a1
Can you please try Wayland builds? Run GDK_BACKEND=wayland ./firefox on Wayland enabled system. X11 has trouble to support 200% scale when running on semi-HiDPI systems.
Flags: needinfo?(stevfredpatrick)
So sorry I didn't see this earlier. I am not sure what you mean by waylan builds, but nightly has it right? I updated today. Test: latest firefox-trunk, logged in to a gnome wayland session. Ran with command GDK_BACKEND=wayland firefox-trunk Still got the blurry buttons still, and loads of weird window resizing issues. I could send a screenshot if it is useful but I assume it is not as nothing has changed since the last time. Also what do you mean by semi-HiDpi?

Tell me to stop if should stop saying this over and over, but it's still been a problem on latest nightlies.

I tried wayland launching again, they were still blurry.

Flags: needinfo?(stevfredpatrick)

(In reply to ilia from comment #3)

So sorry I didn't see this earlier.

I am not sure what you mean by waylan builds, but nightly has it right? I
updated today.

Test: latest firefox-trunk, logged in to a gnome wayland session. Ran with
command GDK_BACKEND=wayland firefox-trunk

Still got the blurry buttons still, and loads of weird window resizing
issues. I could send a screenshot if it is useful but I assume it is not as
nothing has changed since the last time.

A dupe of Bug 1419467?

Also what do you mean by semi-HiDpi?

When your monitor doesn't have high density DPI (I think it's DPI > 196 or so) you don't get HiDPI by default in X11 and you can't set it by the scale factor in X11. The HiDPI/Scale factor works in Wayland only in that case.

A dupe of Bug 1419467?

Ah it seems you are right about that! Should this be closed?

When your monitor doesn't have high density DPI (I think it's DPI > 196 or so) you don't get HiDPI by default in X11 and you can't set it by the scale factor in X11. The HiDPI/Scale factor works in Wayland only in that case.

Ah :/

Let's do the work at Bug 1319838.

Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → DUPLICATE

(In reply to Martin Stránský [:stransky] from comment #5)

When your monitor doesn't have high density DPI (I think it's DPI > 196 or so)
196 or 192?

(In reply to Vlad Zagorodniy from comment #8)

(In reply to Martin Stránský [:stransky] from comment #5)

When your monitor doesn't have high density DPI (I think it's DPI > 196 or so)
196 or 192?

I guess 192 as it's 2x96 and 96 is a standard desktop DPI.

We need to call gtk_style_context_set_scale() before rendering a header
bar button in order to make sure that -gtk-scaled() selects the right
asset on HiDPI.

Assignee: nobody → vladzzag
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: DUPLICATE → ---
Status: REOPENED → ASSIGNED
Priority: -- → P3
Pushed by rgurzau@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c0be50b85894 [Linux/HiDPI] Draw header bar buttons at correct scale on HiDPI, r=stransky
Status: ASSIGNED → RESOLVED
Closed: 7 years ago6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Duplicate of this bug: 1451828
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: