Bug 1497066 - [Linux/HiDPI] Draw header bar buttons at correct scale on HiDPI, r=stransky

Set the style scale in order to be in line with GetStyleContext().

Differential Revision: https://phabricator.services.mozilla.com/D58353

--HG--
extra : moz-landing-system : lando